--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,7 +15,8 @@
     "allowJs": true,
     "checkJs": true,
     "isolatedModules": true,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "strict": true
   },
   "include": [
     "src/**/*.ts",
