the dark realization that you need zod (still broken)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "pixi.js": "^8.13.2",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "zod": "^4.1.9"
   }
 }
